user ID analytics

--- a/project_puppies/index.html
+++ b/project_puppies/index.html
@@ -18,8 +18,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_MEASUREMENT_ID');
+  gtag('config', 'UA-138297118-1');
 </script>
+
 
 </head>
 <body>
