--- a/resume/index.html
+++ b/resume/index.html
@@ -19,8 +19,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_MEASUREMENT_ID');
+  gtag('config', 'UA-138297118-1');
 </script>
+
 
 
 </head>
