added 2 projects done with OC

--- a/index.html
+++ b/index.html
@@ -85,6 +85,34 @@
           </div>
         </div>
       </a>
+      <a href="https://github.com/julienb86/vintage_cameras" target="_blank">
+        <div class="card">
+          <div class="card-img">
+            <img src="./img/homepage-simple-store.png" alt="simple-store-screenshot">
+          </div>
+          <div class="card-title">
+            <h3>Front End Simple Store</h3>
+            <div class="card-description">
+              <p>Projet Junior Web Developer (OpenClassrooms): création d'un site de ventes en ligne</p>
+              <p>HTML/CSS/Bootstrap/JS, Utiliser une API</p>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a href="https://github.com/julienb86/Hot_sauces" target="_blank">
+        <div class="card">
+          <div class="card-img">
+            <img src="./img/hot-sauces.png" alt="simple-store-screenshot">
+          </div>
+          <div class="card-title">
+            <h3>Back End Simple Store</h3>
+            <div class="card-description">
+              <p>Projet Junior Web Developer (OpenClassrooms): création du backend pour un site de ventes en ligne</p>
+              <p>Node JS/Express/Mongo DB</p>
+            </div>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
   <!-- FOOTER -->
