added a new project

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
           </div>
         </div>
       </a>
+      <a href="https://github.com/julienb86/reddit" target="_blank">
+        <div class="card">
+          <div class="card-img">
+            <img src="./img/full-stack-app.png" alt="simple-store-screenshot">
+          </div>
+          <div class="card-title">
+            <h3>Full stack application</h3>
+            <div class="card-description">
+              <p>Projet Junior Web Developer en cours (OpenClassrooms): application full stack pour recréer une application populaire</p>
+              <p>Vue JS/Node JS/Express/Mongo DB</p>
+            </div>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
   <!-- FOOTER -->
