fixed twitter link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         <div class="background-text">
           <h1>julien bouafia</h1>
           <h2>développeur web</h2>
-          <h3>Je crée des sites web et des applications</h3>
         </div>
       </div>
     </div>
@@ -107,7 +106,7 @@
           <div class="card-title">
             <h3>Back End Simple Store</h3>
             <div class="card-description">
-              <p>Projet Junior Web Developer (OpenClassrooms): création du backend pour un site de ventes en ligne</p>
+              <p>Projet OpenClassrooms Junior Web Developer: création du backend pour un site de ventes en ligne</p>
               <p>Node JS/Express/Mongo DB</p>
             </div>
           </div>
@@ -121,7 +120,7 @@
           <div class="card-title">
             <h3>Full stack application</h3>
             <div class="card-description">
-              <p>Projet Junior Web Developer en cours (OpenClassrooms): application full stack pour recréer une application populaire</p>
+              <p>Projet OpenClassrooms Junior Web Developer: application full stack pour recréer une application populaire</p>
               <p>Vue JS/Node JS/Express/Mongo DB</p>
             </div>
           </div>
@@ -136,7 +135,7 @@
       <p>julien.bouafia@gmail.com</p>
       <a href="https://github.com/julienb86" target="_blank"><i class="fab fa-github-square"></i></a>
       <a href="https://www.linkedin.com/in/julien-bouafia-developpeur-web/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://twitter.com/jb8616" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://twitter.com/julienBouafia" target="_blank"><i class="fab fa-twitter-square"></i></a>
     </div>
     <p>&copy; Julien Bouafia - 2019</p>
     <p>Photo by Blake Connally on Unsplash</p>
