--- a/resume/index.html
+++ b/resume/index.html
@@ -234,7 +234,7 @@ Vous pouvez suivre mon travail sur le lien ci-dessous: <br>
       <p>julien.bouafia@gmail.com</p>
       <a href="https://github.com/julienb86" target="_blank"><i class="fab fa-github-square"></i></a>
       <a href="https://www.linkedin.com/in/julien-bouafia-developpeur-web/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://twitter.com/jb8616" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://twitter.com/julienBouafia" target="_blank"><i class="fab fa-twitter-square"></i></a>
     </div>
     <p>&copy; Julien Bouafia - 2019</p>
     <p>Photo by Blake Connally on Unsplash</p>
