added some new projects

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,49 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Galerie</title>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Galerie</title>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'GA_MEASUREMENT_ID');
-</script>
-
-
-</head>
-<body>
-  <header>
+      gtag("config", "GA_MEASUREMENT_ID");
+    </script>
+  </head>
+  <body>
+    <header>
       <h1>Galerie photos<i class="fas fa-globe-africa"></i></h1>
-  </header>
-  <div class="container">
-    <img class="image1 image" src="https://picsum.photos/1200/800?image=123" alt="">
-    <img class="image2 image" src="https://picsum.photos/1200/800?image=268" alt="">
-    <img class="image3 image" src="https://picsum.photos/1200/800?image=147" alt="">
-    <img class="image4 image" src="https://picsum.photos/1200/800?image=420" alt="">
-    <img class="image5 image" src="https://picsum.photos/1200/800?image=238" alt="">
-    <img class="image6 image" src="https://picsum.photos/1200/800?image=137" alt="">
-    <img class="image7 image" src="https://picsum.photos/1200/800?image=213" alt="">
-    <img class="image8 image" src="https://picsum.photos/1200/800?image=164" alt="">
-    <img class="image9 image" src="https://picsum.photos/1200/800?image=249" alt="">
-    <img class="image10 image" src="https://picsum.photos/1200/800?image=305" alt="">
-    <img class="image11 image" src="https://picsum.photos/1200/800?image=179" alt="">
-    <img class="image12 image" src="https://picsum.photos/1200/800?image=208" alt="">
-    <img class="image13 image" src="https://picsum.photos/1200/800?image=139" alt="">
-    <img class="image14 image" src="https://picsum.photos/1200/800?image=157" alt="">
-    <img class="image15 image" src="https://picsum.photos/1200/800?image=295" alt="">
-    <img class="image16 image" src="https://picsum.photos/1200/800?image=184" alt="">
-  </div>
-</body>
+    </header>
+    <div class="container">
+      <img
+        class="image1 image"
+        src="https://picsum.photos/1200/800?image=123"
+        alt=""
+      />
+      <img
+        class="image2 image"
+        src="https://picsum.photos/1200/800?image=268"
+        alt=""
+      />
+      <img
+        class="image3 image"
+        src="https://picsum.photos/1200/800?image=147"
+        alt=""
+      />
+      <img
+        class="image4 image"
+        src="https://picsum.photos/1200/800?image=420"
+        alt=""
+      />
+      <img
+        class="image5 image"
+        src="https://picsum.photos/1200/800?image=238"
+        alt=""
+      />
+      <img
+        class="image6 image"
+        src="https://picsum.photos/1200/800?image=137"
+        alt=""
+      />
+      <img
+        class="image7 image"
+        src="https://picsum.photos/1200/800?image=213"
+        alt=""
+      />
+      <img
+        class="image8 image"
+        src="https://picsum.photos/1200/800?image=164"
+        alt=""
+      />
+      <img
+        class="image9 image"
+        src="https://picsum.photos/1200/800?image=249"
+        alt=""
+      />
+      <img
+        class="image10 image"
+        src="https://picsum.photos/1200/800?image=305"
+        alt=""
+      />
+      <img
+        class="image11 image"
+        src="https://picsum.photos/1200/800?image=179"
+        alt=""
+      />
+      <img
+        class="image12 image"
+        src="https://picsum.photos/1200/800?image=208"
+        alt=""
+      />
+      <img
+        class="image13 image"
+        src="https://picsum.photos/1200/800?image=139"
+        alt=""
+      />
+      <img
+        class="image14 image"
+        src="https://picsum.photos/1200/800?image=157"
+        alt=""
+      />
+      <img
+        class="image15 image"
+        src="https://picsum.photos/1200/800?image=295"
+        alt=""
+      />
+      <img
+        class="image16 image"
+        src="https://picsum.photos/1200/800?image=184"
+        alt=""
+      />
+    </div>
+  </body>
 </html>
