--- a/index.html
+++ b/index.html
@@ -1,146 +1,221 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <title>Julien Bouafia - Développeur Web</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand"
+      rel="stylesheet"
+    />
+    <title>Julien Bouafia - Développeur Web</title>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-138297118-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138297118-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138297118-1');
-</script>
-
-
-</head>
-<body>
-  <div class="grid">
-  <header>
-    <!-- NAVBAR -->
-    <div class="nav">
-        <div class="logo">
-          <a href="#">jb</a>
+      gtag("config", "UA-138297118-1");
+    </script>
+  </head>
+  <body>
+    <div class="grid">
+      <header>
+        <!-- NAVBAR -->
+        <div class="nav">
+          <div class="logo">
+            <a href="#">jb</a>
+          </div>
+          <input type="checkbox" id="toggle" />
+          <div class="menu">
+            <!-- <a href="#competences">Compétences</a> -->
+            <a href="#project">Projets</a>
+            <a href="./resume/index.html">Qui suis-je?</a>
+            <a href="#contact">Me contacter</a>
+          </div>
+          <label for="toggle" class="button-toggle"
+            ><i class="fas fa-bars"></i
+          ></label>
         </div>
-      <input type="checkbox" id="toggle">
-      <div class="menu">
-        <!-- <a href="#competences">Compétences</a> -->
-        <a href="#project">Projets</a>
-        <a href="./resume/index.html">Qui suis-je?</a>
-        <a href="#contact">Me contacter</a>
+        <!-- BACKGROUND  -->
+        <div class="background">
+          <div class="img">
+            <div class="background-text">
+              <h1>julien bouafia</h1>
+              <h2>développeur web</h2>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <!-- PROJECT PART  -->
+      <div class="projects title" id="project">
+        <h2>
+          Projets
+          <span
+            ><a href="#"><i class="fas fa-arrow-circle-up"></i></a
+          ></span>
+        </h2>
+        <div class="cards">
+          <a href="./project_puppies/index.html" target="_blank">
+            <div class="card">
+              <div class="card-img">
+                <img
+                  src="project_puppies/img/background.jpg"
+                  alt="background project"
+                />
+              </div>
+              <div class="card-title">
+                <h3>Puppy socks</h3>
+                <div class="card-description">
+                  <p>Landing page</p>
+                  <p>HTML/CSS/Responsive Design/animations</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://julienb86.github.io/TodoApp/" target="_blank">
+            <div class="card">
+              <div class="card-img">
+                <img src="./img/todo.png" alt="fond_d'ecran" />
+              </div>
+              <div class="card-title">
+                <h3>Todo Application</h3>
+                <div class="card-description">
+                  <p>création d'une application Todo</p>
+                  <p>HTML/CSS/Vanilla JS</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="https://julienb86.github.io/Quizz/" target="_blank">
+            <div class="card">
+              <div class="card-img">
+                <img src="./img/quizz.png" alt="fond_d'ecran" />
+              </div>
+              <div class="card-title">
+                <h3>Quizz Application</h3>
+                <div class="card-description">
+                  <p>création d'un quizz</p>
+                  <p>HTML/CSS/Vanilla JS</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
+            href="https://github.com/julienb86/vintage_cameras"
+            target="_blank"
+          >
+            <div class="card">
+              <div class="card-img">
+                <img
+                  src="./img/homepage-simple-store.png"
+                  alt="simple-store-screenshot"
+                />
+              </div>
+              <div class="card-title">
+                <h3>Front End Simple Store</h3>
+                <div class="card-description">
+                  <p>
+                    Projet Junior Web Developer (OpenClassrooms): création d'un
+                    site de ventes en ligne
+                  </p>
+                  <p>HTML/CSS/Bootstrap/JS, Utiliser une API</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="https://github.com/julienb86/Hot_sauces" target="_blank">
+            <div class="card">
+              <div class="card-img">
+                <img src="./img/hot-sauces.png" alt="simple-store-screenshot" />
+              </div>
+              <div class="card-title">
+                <h3>Back End Simple Store</h3>
+                <div class="card-description">
+                  <p>
+                    Projet OpenClassrooms Junior Web Developer: création du
+                    backend pour un site de ventes en ligne
+                  </p>
+                  <p>Node JS/Express/Mongo DB</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="https://github.com/julienb86/reddit" target="_blank">
+            <div class="card">
+              <div class="card-img">
+                <img
+                  src="./img/full-stack-app.png"
+                  alt="simple-store-screenshot"
+                />
+              </div>
+              <div class="card-title">
+                <h3>Full stack application Vue JS</h3>
+                <div class="card-description">
+                  <p>
+                    Projet OpenClassrooms Junior Web Developer: application full
+                    stack pour recréer une application populaire
+                  </p>
+                  <p>Vue JS/Node JS/Express/Mongo DB</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
+            href="https://github.com/julienb86/remoteChallenge"
+            target="_blank"
+          >
+            <div class="card">
+              <div class="card-img">
+                <img src="./img/reactApp.png" alt="fond_d'ecran" />
+              </div>
+              <div class="card-title">
+                <h3>Full stack Application React</h3>
+                <div class="card-description">
+                  <p>création d'une simple application CRUD</p>
+                  <p>HTML/CSS/React/NodeJS/Express</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
-      <label for="toggle" class="button-toggle"><i class="fas fa-bars"></i></label>
+      <!-- FOOTER -->
+      <footer id="contact">
+        <div class="social-network">
+          <h3>Me contacter:</h3>
+          <p>julienbouafia@gmail.com</p>
+          <a href="https://github.com/julienb86" target="_blank"
+            ><i class="fab fa-github-square"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/julien-bouafia-developpeur-web/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://twitter.com/julienBouafia" target="_blank"
+            ><i class="fab fa-twitter-square"></i
+          ></a>
+        </div>
+        <p>&copy; Julien Bouafia - 2019</p>
+        <p>Photo by Blake Connally on Unsplash</p>
+      </footer>
     </div>
-    <!-- BACKGROUND  -->
-    <div class="background">
-      <div class="img">
-        <div class="background-text">
-          <h1>julien bouafia</h1>
-          <h2>développeur web</h2>
-        </div>
-      </div>
-    </div>
-  </header>
-
-
-  <!-- PROJECT PART  -->
-  <div class="projects title" id="project">
-    <h2>Projets <span><a href="#"><i class="fas fa-arrow-circle-up"></i></a></span></h2>
-    <div class="cards">
-      <a href="./project_puppies/index.html" target="_blank">
-      <div class="card">
-        <div class="card-img">
-          <img src="project_puppies/img/background.jpg" alt="background project">
-        </div>
-        <div class="card-title">
-          <h3>Puppy socks</h3>
-          <div class="card-description">
-              <p>création d'un site internet personnel</p>
-              <p>HTML/CSS/Responsive Design/animations</p>
-          </div>
-        </div>
-      </div>
-      </a>
-      <a href="./gallery/index.html" target="_blank">
-        <div class="card">
-          <div class="card-img">
-            <img src="https://picsum.photos/1200/800?image=123" alt="fond_d'ecran">
-          </div>
-          <div class="card-title">
-            <h3>Galerie Photos</h3>
-            <div class="card-description">
-              <p>création d'une galerie photo</p>
-              <p>HTML/CSS/Responsive design/animations </p>
-            </div>
-          </div>
-        </div>
-      </a>
-      <a href="https://github.com/julienb86/vintage_cameras" target="_blank">
-        <div class="card">
-          <div class="card-img">
-            <img src="./img/homepage-simple-store.png" alt="simple-store-screenshot">
-          </div>
-          <div class="card-title">
-            <h3>Front End Simple Store</h3>
-            <div class="card-description">
-              <p>Projet Junior Web Developer (OpenClassrooms): création d'un site de ventes en ligne</p>
-              <p>HTML/CSS/Bootstrap/JS, Utiliser une API</p>
-            </div>
-          </div>
-        </div>
-      </a>
-      <a href="https://github.com/julienb86/Hot_sauces" target="_blank">
-        <div class="card">
-          <div class="card-img">
-            <img src="./img/hot-sauces.png" alt="simple-store-screenshot">
-          </div>
-          <div class="card-title">
-            <h3>Back End Simple Store</h3>
-            <div class="card-description">
-              <p>Projet OpenClassrooms Junior Web Developer: création du backend pour un site de ventes en ligne</p>
-              <p>Node JS/Express/Mongo DB</p>
-            </div>
-          </div>
-        </div>
-      </a>
-      <a href="https://github.com/julienb86/reddit" target="_blank">
-        <div class="card">
-          <div class="card-img">
-            <img src="./img/full-stack-app.png" alt="simple-store-screenshot">
-          </div>
-          <div class="card-title">
-            <h3>Full stack application</h3>
-            <div class="card-description">
-              <p>Projet OpenClassrooms Junior Web Developer: application full stack pour recréer une application populaire</p>
-              <p>Vue JS/Node JS/Express/Mongo DB</p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <!-- FOOTER -->
-  <footer id="contact">
-    <div class="social-network">
-      <h3>Me contacter:</h3>
-      <p>julien.bouafia@gmail.com</p>
-      <a href="https://github.com/julienb86" target="_blank"><i class="fab fa-github-square"></i></a>
-      <a href="https://www.linkedin.com/in/julien-bouafia-developpeur-web/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://twitter.com/julienBouafia" target="_blank"><i class="fab fa-twitter-square"></i></a>
-    </div>
-    <p>&copy; Julien Bouafia - 2019</p>
-    <p>Photo by Blake Connally on Unsplash</p>
-  </footer>
-  </div>
-
-</body>
+  </body>
 </html>
