--- a/project_puppies/index.html
+++ b/project_puppies/index.html
@@ -1,142 +1,167 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <title>PuppiesSocks</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Coiny"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <title>PuppiesSocks</title>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-138297118-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138297118-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138297118-1');
-</script>
-
-
-</head>
-<body>
-  <div class="grid">
-    <header>
-      <aside>
-        <div class="add">
-          <p>#1 gift product for puppies <i class="fas fa-gift"></i> made in puppieLand</p>
-        </div>
-      </aside>
-      <nav class="navbar">
-        <div class="logo"><a href="#"><i class="fas fa-socks"></i></a></div>
-        <label for="toggle" class="toggle" ><i class="fas fa-bars"></i></label>
-        <input type="checkbox" id="toggle" class="toggle-check">
-        <ul class="navbar-items">
-          <li><a href="#products">products</a></li>
-          <li><a href="#about">about us</a></li>
-          <li><a href="#contact">contact</a></li>
-        </ul>
-      </nav>
-      <div class="background">
-        <div class="background-content">
-          <h1>Puppy Shop</h1>
-          <h2>Keep your dog's paws warm!</h2>
-          <div class="btn" >
-            <button><a href="#products">shop now</a></button>
+      gtag("config", "UA-138297118-1");
+    </script>
+  </head>
+  <body>
+    <div class="grid">
+      <header>
+        <aside>
+          <div class="add">
+            <p>
+              #1 gift product for puppies <i class="fas fa-gift"></i> made in
+              puppieLand
+            </p>
           </div>
-        </div>
-      </div>
-    </header>
-    <main>
-      <h1>featured products</h1>
-      <div class="products" id="products">
-        <div class="card">
-          <div class="card-img">
-            <img src="img/puppie1.jpg" alt="puppie">
+        </aside>
+        <nav class="navbar">
+          <div class="logo">
+            <a href="#"><i class="fas fa-socks"></i></a>
           </div>
-          <div class="card-info">
-            <span class="card-info-sale">sale!</span>
-          </div>
-          <div class="card-body">
-            <div class="card-title"><a href="#">Customface Socks</a></div>
-            <div class="card-price">25$</div>
-            <div class="card-price-presale">34$</div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="img/puppies2.jpg" alt="puppie">
-          </div>
-          <div class="card-info">
-            <span class="card-info-sale">sale!</span>
-          </div>
-          <div class="card-body">
-            <div class="card-title"><a href="#">CustomJoe Socks</a></div>
-            <div class="card-price">21$</div>
-            <div class="card-price-presale">31.99$</div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="img/puppies3.jpg" alt="puppie">
-          </div>
-          <div class="card-info">
-            <span class="card-info-sale">sale!</span>
-          </div>
-          <div class="card-body">
-            <div class="card-title"><a href="#">CustomJack Socks</a></div>
-            <div class="card-price">15$</div>
-            <div class="card-price-presale">23.75$</div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="img/puppies4.jpg" alt="puppie">
-          </div>
-          <div class="card-info">
-            <span class="card-info-sale">sale!</span>
-          </div>
-          <div class="card-body">
-            <div class="card-title"><a href="#">CustomJack Socks</a></div>
-            <div class="card-price">15$</div>
-            <div class="card-price-presale">23.75$</div>
-          </div>
-        </div>
-      </div>
-      <aside class="shop">
-        <div class="btn">
-          <button>shop now</button>
-        </div>
-      </aside>
-      <section>
-        <h1>About us</h1>
-        <div class="about" id="about">
-          <div class="about-comment">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At tempore laborum et omnis accusantium, inventore maxime totam mollitia officia ipsa.</p>
-            <img src="img/about.jpg" alt="dog">
-          </div>
-          <div class="about-comment">
-            <img src="img/about2.jpg" alt="dog">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At tempore laborum et omnis accusantium, inventore maxime totam mollitia officia ipsa.</p>
-          </div>
-        </div>
-      </section>
-      <footer>
-        <div class="contact" id="contact">
-          <h2>Contact</h2>
-          <div class="logo"><a href="#"><i class="fas fa-socks"></i></a></div>
-          <ul>
-            <li>5 puppie street 54789 PuppieLand<li>
-            <li>0987 1547 1574 136</li>
-            <li>PuppiesSocks@pup.fr</li>
+          <label for="toggle" class="toggle"><i class="fas fa-bars"></i></label>
+          <input type="checkbox" id="toggle" class="toggle-check" />
+          <ul class="navbar-items">
+            <li><a href="#products">products</a></li>
+            <li><a href="#about">about us</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
+        </nav>
+        <div class="background">
+          <div class="background-content">
+            <h1>Puppy Shop</h1>
+            <h2>Keep your dog's paws warm!</h2>
+            <div class="btn">
+              <button><a href="#products">shop now</a></button>
+            </div>
+          </div>
         </div>
-      </footer>
-    </main>
-  </div>
-</body>
+      </header>
+      <main>
+        <h1>featured products</h1>
+        <div class="products" id="products">
+          <div class="card">
+            <div class="card-img">
+              <img src="img/puppie1.jpg" alt="puppie" />
+            </div>
+            <div class="card-info">
+              <span class="card-info-sale">sale!</span>
+            </div>
+            <div class="card-body">
+              <div class="card-title"><a href="#">Customface Socks</a></div>
+              <div class="card-price">25$</div>
+              <div class="card-price-presale">34$</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="img/puppies2.jpg" alt="puppie" />
+            </div>
+            <div class="card-info">
+              <span class="card-info-sale">sale!</span>
+            </div>
+            <div class="card-body">
+              <div class="card-title"><a href="#">CustomJoe Socks</a></div>
+              <div class="card-price">21$</div>
+              <div class="card-price-presale">31.99$</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="img/puppies3.jpg" alt="puppie" />
+            </div>
+            <div class="card-info">
+              <span class="card-info-sale">sale!</span>
+            </div>
+            <div class="card-body">
+              <div class="card-title"><a href="#">CustomJack Socks</a></div>
+              <div class="card-price">15$</div>
+              <div class="card-price-presale">23.75$</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="img/puppies4.jpg" alt="puppie" />
+            </div>
+            <div class="card-info">
+              <span class="card-info-sale">sale!</span>
+            </div>
+            <div class="card-body">
+              <div class="card-title"><a href="#">CustomJack Socks</a></div>
+              <div class="card-price">15$</div>
+              <div class="card-price-presale">23.75$</div>
+            </div>
+          </div>
+        </div>
+        <aside class="shop">
+          <div class="btn">
+            <button>shop now</button>
+          </div>
+        </aside>
+        <section>
+          <h1>About us</h1>
+          <div class="about" id="about">
+            <div class="about-comment">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
+                tempore laborum et omnis accusantium, inventore maxime totam
+                mollitia officia ipsa.
+              </p>
+              <img src="img/about.jpg" alt="dog" />
+            </div>
+            <div class="about-comment">
+              <img src="img/about2.jpg" alt="dog" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
+                tempore laborum et omnis accusantium, inventore maxime totam
+                mollitia officia ipsa.
+              </p>
+            </div>
+          </div>
+        </section>
+        <footer>
+          <div class="contact" id="contact">
+            <h2>Contact</h2>
+            <div class="logo">
+              <a href="#"><i class="fas fa-socks"></i></a>
+            </div>
+            <ul>
+              <li>5 puppie street 54789 PuppieLand</li>
+              <li></li>
+              <li>0987 1547 1574 136</li>
+              <li>PuppiesSocks@pup.fr</li>
+            </ul>
+          </div>
+        </footer>
+      </main>
+    </div>
+  </body>
 </html>
